# ProveKit

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Caddyfile  FEATURES.md  LICENSE  Makefile  README.md  SECURITY.md  compose.contabo.yml  compose.gateway.yml  compose.prod.yml  docker-compose.yml  fly.toml  railway.json  render.yaml
.github/: dependabot.yml  (+1 more)
backend/: .dockerignore  .env.example  Dockerfile  README.md  agentman.db-shm  agentman.db-wal  alembic.ini  pyproject.toml  requirements-dev.txt  requirements.txt
backend/agentman/: cli.py  config.py  database.py  main.py  models.py  observability.py
backend/agentman/migrations/: env.py
backend/agentman/routers/: auth.py  connections.py  deployments.py  flows.py  library.py  prompts.py  run.py  runtime.py  traces.py  usage.py
backend/agentman/services/: assertions.py  auth.py  deploy.py  dispatch.py  email.py  flow.py  limits.py  masking.py  netguard.py  otel.py  promptfoo.py  runstore.py  sealing.py  templates.py  testfile.py  tooling.py  workspace.py
backend/agentman/services/providers/: a2a_client.py  agent_http.py  llm.py  mcp_client.py
backend/agentman/templates/flows/: banking-answer.yaml  banking-moderation-gate.yaml  banking-score-gate.yaml  banking-sentiment-route.yaml  community-forum-answer.yaml  community-forum-draft-critique-revise.yaml  community-forum-language-route.yaml  community-forum-summarize-then-decide.yaml  community-forum-tag-enrich.yaml  content-moderation-extract-to-json.yaml  customer-support-action-items.yaml  customer-support-answer.yaml  customer-support-faq-match-answer.yaml  customer-support-moderation-gate.yaml  customer-support-score-gate.yaml  customer-support-sentiment-route.yaml  customer-support-severity-tiers.yaml  developer-tooling-action-items.yaml  developer-tooling-answer.yaml  developer-tooling-extract-to-json.yaml  developer-tooling-score-gate.yaml  developer-tooling-sentiment-route.yaml  developer-tooling-summarize-then-decide.yaml  developer-tooling-tone-rewrite.yaml  developer-tooling-translate-reply.yaml  devrel-classify-intent.yaml  devrel-keyword-extract.yaml  e-commerce-action-items.yaml  e-commerce-faq-match-answer.yaml  e-commerce-moderation-gate.yaml  e-commerce-sentiment-route.yaml  e-commerce-tag-enrich.yaml  e-commerce-triage-route.yaml  education-action-items.yaml  education-language-route.yaml  education-tone-rewrite.yaml  finance-classify-intent.yaml  finance-language-route.yaml  finance-redact-summarize.yaml  food-delivery-action-items.yaml  (+69 more)
backend/app/: config.py  database.py  main.py  models.py
backend/app/routers/: connections.py  flows.py  library.py  prompts.py  run.py
backend/app/services/: assertions.py  dispatch.py  flow.py
backend/app/services/providers/: agent_http.py  llm.py  mcp_client.py
backend/migrations/: env.py
backend/migrations/versions/: 323eb73d463c_user_email_verified.py  49e8ab812556_baseline_schema.py  819ed5ff183e_workspace_ingest_key.py  a1b2c3d4e5f6_user_token_version.py  a3566b43c221_users_table.py  f0e043687096_baseline_schema.py  f38dc7b50623_workspaces_tenancy.py
backend/provekit/: __init__.py  auto.py  buffer.py  cli.py  config.py  conformance.py  database.py  demo.py  doctor.py  eval.py  grpc_ingest.py  main.py  mcp.py  models.py  observability.py  scorers.py  trace.py  vcr.py
backend/provekit/migrations/: env.py
backend/provekit/migrations/versions/: 49e8ab812556_baseline_schema.py  9d2c06bfa4e6_baseline.py  a1b2c3d4e5f6_feedback_sessions.py  a2b3c4d5e6f7_usage_records.py  a3b4c5d6e7f8_metric_rollups.py  a7b8c9d0e1f2_replay_webhook_prompts.py  a9b0c1d2e3f4_digests.py  b0c1d2e3f4a5_automation_rules.py  b2c3d4e5f6a7_datasets.py  b2d4f6a8c1e3_api_keys.py  b3c4d5e6f7a8_export_schedules.py  b4c5d6e7f8a9_retention_events.py  b7c8d9e0f1a2_flow_studio.py  b8c9d0e1f2a3_span_notes.py  c1d2e3f4a5b6_prompts_and_turns.py  c3d4e5f6a7b8_experiments.py  c3e5a7b9d1f2_run_span_hierarchy.py  c4d5e6f7a8b9_custom_scorers.py  c5d6e7f8a9b0_search_text.py  c8d9e0f1a2b3_dataset_snapshots.py  c9d0e1f2a3b4_idempotent_ingest.py  d0e1f2a3b4c5_alert_webhook.py  d4e5f6a7b8c9_alerts.py  d6e7f8a9b0c1_dataset_versioning.py  d9e0f1a2b3c4_note_threads.py  e0f1a2b3c4d5_tenant_suspend.py  e1f2a3b4c5d6_audit_log.py  e5f6a7b8c9d0_admin.py  e7f8a9b0c1d2_saved_views.py  f1a2b3c4d5e6_project_invites.py  (+3 more)
backend/provekit/routers/: activity.py  admin.py  alerts.py  apikeys.py  auth.py  automation.py  connections.py  dataset_writes.py  datasets.py  deployments.py  digests.py  evaluators.py  experiments.py  export.py  flows.py  library.py  metrics.py  playground.py  projects.py  prompts.py  review.py  run.py  runtime.py  scim.py  sso.py  traces.py  views.py  webhooks.py
backend/provekit/services/: apikey.py  assertions.py  audit.py  auth.py  automation.py  calibration.py  custom_scorers.py  datasets.py  deploy.py  digests.py  dispatch.py  email.py  errors.py  export.py  export_schedule.py  fleet.py  flow.py  flow_trace.py  impersonation.py  invites.py  limits.py  llm_client.py  masking.py  mentions.py  netguard.py  notify.py  oidc.py  otel.py  partitions.py  payloads.py  pricing.py  promptfoo.py  prompts.py  redact.py  replay.py  roles.py  rollups.py  scim.py  sealing.py  search.py  (+11 more)
backend/tests/: conftest.py  fake_provider.py  mcp_stdio_server.py  test_a2a.py  test_account_recovery.py  test_activity.py  test_admin.py  test_alerts.py  test_apikeys.py  test_auth.py  test_auth_hardening.py  test_autoinstrument.py  test_automation.py  test_buffer.py  test_calibration.py  test_cli.py  test_clock_skew.py  test_conformance.py  test_connection_secrets.py  test_cov_assertions.py  test_cov_dispatch.py  test_cov_flow.py  test_cov_infra.py  test_cov_library_run.py  test_cov_limits_auth.py  test_cov_llm_mcp.py  test_cov_routers.py  test_coverage_extra.py  test_custom_scorers.py  test_dataset_snapshots.py  test_dataset_versioning.py  test_datasets.py  test_deployments.py  test_dialects.py  test_digests.py  test_doctor.py  test_error_messages.py  test_eval.py  test_evaluators.py  test_experiments.py  (+70 more)
backend/tests/fixtures/: redaction_corpus.json
(+893 files in other folders)
