[project]
name = "provekit"
version = "0.1.0"
description = "Drop-in agent tracing — add one decorator, get a project key, review every run your agent makes."
requires-python = ">=3.11"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "ProveKit contributors" }]
keywords = ["agent", "llm", "testing", "evals", "mcp", "ci", "prompt", "openai", "anthropic"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Testing",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

# Core = exactly what the `provekit` CLI (the pip entry point) imports. Version RANGES, not
# ==, so `pip install provekit` resolves alongside whatever else is in a user's env; the
# exact reproducible pins live in requirements.txt (the deployment lock) and drive Docker.
# The web app / hosted server deps live in the `server` extra below — install with
# `pip install provekit[server]`.
dependencies = [
    "sqlalchemy>=2.0,<3",
    "pydantic>=2.10,<3",
    "pydantic-settings>=2.7,<3",
    "httpx>=0.28,<1",
    "jsonschema>=4.23,<5",
    "cryptography>=42,<50",
    "pyyaml>=6,<7",
    "anyio>=4,<5",
]

[project.urls]
Homepage = "https://github.com/MobirizerServices/ProveKit"
Repository = "https://github.com/MobirizerServices/ProveKit"
Issues = "https://github.com/MobirizerServices/ProveKit/issues"

[project.optional-dependencies]
# The web app + hosted server (FastAPI, Postgres, Redis, migrations, error reporting).
# Not needed to run `provekit` tests in CI: `pip install provekit[server]`.
server = [
    "fastapi>=0.115,<1",
    "uvicorn[standard]>=0.34,<1",
    "alembic>=1.18,<2",
    "psycopg[binary]>=3.3,<4",
    "email-validator>=2.2,<3",
    "redis>=5.2,<6",
    "sentry-sdk[fastapi]>=2.20,<3",
]
# The tracing SDK users install in their agent: `@pk.trace` captures runs and ships them
# to their ProveKit portal. `pip install provekit[trace]`. Only the OpenTelemetry SDK is
# added — the JSON exporter and HTTP shipping ride on httpx, already a core dep.
trace = [
    "opentelemetry-api>=1.20,<2",
    "opentelemetry-sdk>=1.20,<2",
]
# Keep in sync with requirements-dev.txt — CI gates on pytest+coverage and ruff.
dev = ["pytest==9.1.1", "pytest-cov==6.0.0", "ruff==0.9.2"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["provekit", "provekit.routers", "provekit.services"]
include-package-data = true

[tool.setuptools.package-data]
provekit = [
    # the Alembic migrations — the app runs `upgrade head` on startup, so a wheel
    # install that omitted these could not boot against a persistent database.
    "migrations/env.py",
    "migrations/script.py.mako",
    "migrations/versions/*.py",
]

[tool.coverage.run]
source = ["provekit"]
# Migrations are one-shot schema DDL replayed by Alembic, not application logic; they live
# inside the package so wheels ship them, which would otherwise drag them into the report.
omit = ["provekit/migrations/*"]

[tool.coverage.report]
# CI gates on this. Provisionally 80 for the post-pivot MVP: the tracing spine (auth,
# api-keys, trace SDK, workspace) is ~95-100%, while some utilities (email SMTP, sealing
# crypto branches) lost their incidental coverage when the test-client suites were removed.
# Raise back toward 90 as the nested-trace review + project features land with their tests.
fail_under = 80
show_missing = true

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
# Lenient set: pyflakes (F) catches real bugs (undefined names, etc.) and a subset
# of pycodestyle (E). We relax a few purely-stylistic rules the current code trips:
#   E501 - long lines (line-length is advisory here, not enforced)
#   E702 - multiple statements on one line (semicolons); a deliberate style choice
#   F401 - unused imports (a couple of re-export/placeholder imports)
# Import sorting (I) is intentionally left out of the select set for the same reason.
select = ["E", "F"]
ignore = ["E501", "E702", "F401"]
