[project]
name = "provekit"
version = "0.6.0"
description = "Drop-in agent tracing — add one decorator, get a project key, review every run your agent makes."
requires-python = ">=3.11"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "ProveKit contributors" }]
keywords = ["agent", "llm", "tracing", "observability", "opentelemetry", "openai", "anthropic", "otel"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Monitoring",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

# Core = exactly what the `provekit` CLI (the pip entry point) imports. Version RANGES, not
# ==, so `pip install provekit` resolves alongside whatever else is in a user's env; the
# exact reproducible pins live in requirements.txt (the deployment lock) and drive Docker.
# The web app / hosted server deps live in the `server` extra below — install with
# `pip install provekit[server]`.
# Core is deliberately tiny: the tracing SDK (provekit.trace) only needs httpx. The web
# app / hosted server deps live in the `server` extra (`pip install provekit[server]`), and
# the OpenTelemetry pieces in `trace` — so `pip install "provekit[trace]"` stays lean.
dependencies = [
    "httpx>=0.28,<1",
]

[project.scripts]
# The CLI: an API client over the documented /v1 endpoints, so traces, datasets and eval
# runs are scriptable from a shell or a CI job. Core deps only (httpx) — no server import.
provekit = "provekit.cli:main"
# The MCP debug server. Needs the [mcp] extra installed to run.
provekit-mcp = "provekit.mcp:main"
# A zero-setup smoke test: `provekit-demo` sends a gallery of traces to your portal.
provekit-demo = "provekit.demo:main"
# Says why no traces are arriving — the one thing fail-open can't tell you itself.
provekit-doctor = "provekit.doctor:main"

[project.urls]
Homepage = "https://github.com/MobirizerServices/ProveKit"
Repository = "https://github.com/MobirizerServices/ProveKit"
Issues = "https://github.com/MobirizerServices/ProveKit/issues"

[project.optional-dependencies]
# The web app + hosted server (FastAPI, Postgres, Redis, migrations, error reporting).
# Not needed to run `provekit` tests in CI: `pip install provekit[server]`.
server = [
    "fastapi>=0.115,<1",
    "uvicorn[standard]>=0.34,<1",
    "sqlalchemy>=2.0,<3",
    "pydantic>=2.10,<3",
    "pydantic-settings>=2.7,<3",
    "cryptography>=42,<50",
    "anyio>=4,<5",
    "alembic>=1.18,<2",
    "psycopg[binary]>=3.3,<4",
    "email-validator>=2.2,<3",
    "redis>=5.2,<6",
    "sentry-sdk[fastapi]>=2.20,<3",
]
# The tracing SDK users install in their agent: `@pk.trace` captures runs and ships them
# to their ProveKit portal. `pip install provekit[trace]`. Only the OpenTelemetry SDK is
# added — the JSON exporter and HTTP shipping ride on httpx, already a core dep.
trace = [
    "opentelemetry-api>=1.20,<2",
    "opentelemetry-sdk>=1.20,<2",
    # auto-capture the biggest providers so one decorator yields the whole nested flow with
    # zero extra code. Dormant if the provider SDK isn't installed; other providers still
    # nest via pk.span() or any OTel instrumentation you add.
    "openinference-instrumentation-openai>=0.1",
    "openinference-instrumentation-anthropic>=0.1",
]
# `pip install provekit[http]` — capture every outbound HTTP call (tool APIs, vector DBs,
# webhooks), not just LLM calls, as child spans. Dormant unless the target client is used.
http = [
    "opentelemetry-instrumentation-httpx>=0.40b0",
    "opentelemetry-instrumentation-requests>=0.40b0",
    "opentelemetry-instrumentation-urllib>=0.40b0",
    "opentelemetry-instrumentation-urllib3>=0.40b0",
    "opentelemetry-instrumentation-aiohttp-client>=0.40b0",
]
# `pip install provekit[data]` — the calls an agent makes *around* the model: vector stores,
# databases, queues, AWS. A retrieval that took 900ms is invisible without these, and it is
# very often the thing that actually made the run slow.
data = [
    "opentelemetry-instrumentation-botocore>=0.40b0",
    "opentelemetry-instrumentation-sqlalchemy>=0.40b0",
    "opentelemetry-instrumentation-psycopg>=0.40b0",
    "opentelemetry-instrumentation-asyncpg>=0.40b0",
    "opentelemetry-instrumentation-redis>=0.40b0",
    "opentelemetry-instrumentation-pymongo>=0.40b0",
    "opentelemetry-instrumentation-elasticsearch>=0.40b0",
]
# `pip install provekit[trace-all]` — bundle the whole instrumentor set so one decorator
# captures LLM calls across every common provider and agent framework, no manual spans.
# Instrumentors are tiny and dormant unless their target library is installed.
trace-all = [
    "opentelemetry-api>=1.20,<2",
    "opentelemetry-sdk>=1.20,<2",
    "openinference-instrumentation-openai>=0.1",
    "openinference-instrumentation-anthropic>=0.1",
    "openinference-instrumentation-langchain>=0.1",
    "openinference-instrumentation-llama-index>=0.1",
    "openinference-instrumentation-crewai>=0.1",
    "openinference-instrumentation-bedrock>=0.1",
    "openinference-instrumentation-litellm>=0.1",
    "openinference-instrumentation-groq>=0.1",
    "openinference-instrumentation-mistralai>=0.1",
    "openinference-instrumentation-dspy>=0.1",
    "openinference-instrumentation-haystack>=0.1",
    "openinference-instrumentation-google-genai>=0.1",
    "openinference-instrumentation-vertexai>=0.1",
    "openinference-instrumentation-portkey>=0.1",
    "openinference-instrumentation-autogen>=0.1",
    "openinference-instrumentation-openai-agents>=0.1",
    "openinference-instrumentation-smolagents>=0.1",
    "openinference-instrumentation-agno>=0.1",
    "openinference-instrumentation-pydantic-ai>=0.1",
    "openinference-instrumentation-beeai>=0.1",
    "openinference-instrumentation-google-adk>=0.1",
    "openinference-instrumentation-claude-agent-sdk>=0.1",
    "openinference-instrumentation-guardrails>=0.1",
    "openinference-instrumentation-instructor>=0.1",
    "openinference-instrumentation-mcp>=0.1",
    # generic HTTP so non-LLM calls are captured too
    "opentelemetry-instrumentation-httpx>=0.40b0",
    "opentelemetry-instrumentation-requests>=0.40b0",
    "opentelemetry-instrumentation-urllib>=0.40b0",
    "opentelemetry-instrumentation-urllib3>=0.40b0",
    "opentelemetry-instrumentation-aiohttp-client>=0.40b0",
]
# `pip install provekit[mcp]` — the MCP debug server (`provekit-mcp`). A *debug channel*, not
# client instrumentation: it reads already-captured traces from your portal by project key.
mcp = ["mcp>=1.2"]
# Keep in sync with requirements-dev.txt — CI gates on pytest+coverage and ruff.
dev = ["pytest==9.1.1", "pytest-cov==6.0.0", "ruff==0.9.2"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["provekit", "provekit.routers", "provekit.services"]
include-package-data = true

[tool.setuptools.package-data]
provekit = [
    # the Alembic migrations — the app runs `upgrade head` on startup, so a wheel
    # install that omitted these could not boot against a persistent database.
    "migrations/env.py",
    "migrations/script.py.mako",
    "migrations/versions/*.py",
]

[tool.coverage.run]
source = ["provekit"]
# Migrations are one-shot schema DDL replayed by Alembic, not application logic; they live
# inside the package so wheels ship them, which would otherwise drag them into the report.
omit = ["provekit/migrations/*", "provekit/demo.py"]

[tool.coverage.report]
# CI gates on this. Set below the current ~97% to leave headroom for cross-interpreter
# variance; the only meaningfully-uncovered code is the Postgres-only pool/advisory-lock
# branches in database.py (not exercisable against the SQLite test DB).
fail_under = 95
show_missing = true

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
# Lenient set: pyflakes (F) catches real bugs (undefined names, etc.) and a subset
# of pycodestyle (E). We relax a few purely-stylistic rules the current code trips:
#   E501 - long lines (line-length is advisory here, not enforced)
#   E702 - multiple statements on one line (semicolons); a deliberate style choice
#   F401 - unused imports (a couple of re-export/placeholder imports)
# Import sorting (I) is intentionally left out of the select set for the same reason.
select = ["E", "F"]
ignore = ["E501", "E702", "F401"]
